--- a/test.adoc
+++ b/test.adoc
@@ -1,8 +1,3 @@
-[source,mermaid]
-....
-sequenceDiagram
-    participant Alice
-    participant Bob
-    Alice->>Bob: Hello Bob, how are you?
-    Bob-->>Alice: Great!
-....
+# Test to include mermaid graph in Asciidoc
+
+include::mermaid_graph.adoc
